# pipsvue

./: .gitignore  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
pips_rust/: .gitignore  Cargo.toml  games.json
pips_rust/benches/: solver.rs
pips_rust/src/: game.rs  game_v2.rs  lib.rs  loader.rs  main.rs  solver.rs
src/: App.vue
src/assets/: base.css  hello_wasm.d.ts  hello_wasm.js  hello_wasm_bg.wasm  hello_wasm_bg.wasm.d.ts  main.css
src/components/: DominoSVG.vue  DraggableDomino.vue  PipsGrid.vue
src/components/types/: domino.ts
