[package]
name = "pips_rust"
version = "0.1.0"
edition = "2024"


[dependencies]
wasm-bindgen = "0.2"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "solver"
harness = false

[profile.release]
debug = true
